<resources>
    <string name="app_name" translatable="false">GUI programming</string>
    <string name="food_app_name" translatable="false">Food Nutrition DB</string>

    <string name="food_app_please_wait">Please wait…</string>
    <string name="food_search_food">Enter ingredient name…</string>

    <string name="food_search_btn">Search</string>
    <string name="food_fav_btn">Favourites</string>

    <string name="food_add_to_string_favorites">Add to favorites</string>
    <string name="food_remove_from_favorites">Remove from favorites</string>

    <string name="food_msg_added">Ingredient added to favorites!</string>
    <string name="food_msg_not_added">Failed to add ingredient to favorites!</string>
    <string name="food_msg_removed">Failed removed from favorites!</string>
    <string name="food_msg_not_removed">Unable to remove ingredient from favorites!</string>

    <string name="food_none_saved_msg">Add ingredients to favorites to view statistics!</string>

    <string name="food_statistics">Statistics</string>
    <string name="food_help">Help</string>
    <string name="food_energy">Energy</string>>
    <string name="food_enter_tag_to_set">Enter TAG to set</string>
    <string name="food_cancel">Cancel</string>
    <string name="food_ok">OK</string>
    <string name="food_total_data">Total saved ingredients:</string>
    <string name="food_total_calories">Total calories:</string>
    <string name="food_minimum_calories">Minimum calories:</string>
    <string name="food_average_calories">Average calories:</string>
    <string name="food_maximum_calories">Maximum calories:</string>
    <string name="food_category">Category:</string>
    <string name="food_tag">Tag:</string>

    <string name="food_got_it">Got it</string>
    <string name="food_help_home">On this screen, you can search for a food, to view food calories, click on
    the title. You can also view a list of previously saved food list by pressing \'Favourites\' button.</string>
    <string name="food_help_detail">
        You can view energy and other detail of food on this screen.
        You can add the current item into favourite list, by pressing \'Add to Favourites\' button.
        You can remove the current item from favourite list, by pressing \'Remove from Favourites\' button.
    </string>
    <string name="food_ingredient_detail_screen">Ingredient details screen</string>
    <string name="food_help_detail_screen">From the list of ingredients, you will be redirected here. On this screen you can see the nutrition of an ingredient.</string>
    <string name="cbc_app_name" translatable="false">CBC News Reader</string>

    <string name="cbc_please_wait">Please wait…</string>

    <string name="cbc_news_feed">News feed</string>
    <string name="cbc_favourites">Favourites</string>

    <string name="cbc_published_date">Published date:</string>

    <string name="cbc_detail_desc">Description:</string>
    <string name="cbc_category">Category:</string>
    <string name="cbc_author">Author:</string>

    <string name="cbc_save_article">Save article</string>
    <string name="cbc_remove_article">Remove article</string>
    <string name="cbc_view_in_browser">View in browser</string>

    <string name="cbc_msg_added">Article saved offline!</string>
    <string name="cbc_msg_not_added">Failed to save article!</string>
    <string name="cbc_msg_removed">Article removed!</string>
    <string name="cbc_msg_not_removed">Failed to remove article from!</string>

    <string name="cbc_no_saved_articles">No. of saved articles</string>

    <string name="cbc_help">Help</string>
    <string name="cbc_stats">Statistics</string>

    <string name="cbc_none_saved_msg">Save articles to view statistics!</string>

    <string name="cbc_max_count">Maximum word count</string>
    <string name="cbc_min_count">Minimum word count</string>
    <string name="cbc_avg_count">Average word count</string>

    <string name="cbc_help_ok">OK</string>
    <string name="cbc_help_home">Click on the \'News feed\' button to fetch and view latest news titles.
    Click on a title to read article.\n
    Click on the \'Favourites\' button to view saved articles.</string>
    <string name="cbc_help_detail">Click on the \'View in browser\' button to read full article online.\n
    Click on \'Save article\' to save the current news article to view article later on.\n
    Click on \'Remove article\' to remove the current news article.</string>
    <string name="movie_app_name" translatable="false">Movie Information</string>
    <string name="movie_continue" translatable="false">Continue</string>

    <string name="movie_please_wait">Please wait…</string>

    <string name="movie_search_btn">Search</string>
    <string name="movie_favourites_btn">Favourites</string>

    <string name="movie_hint_movie_name">Search for movie…</string>
    <string name="movie_settings">Settings</string>
    <string name="movie_help">Help</string>
    <string name="movie_favorites">Favorites</string>
    <string name="movie_add_to_string_favorites">Add to favourites</string>
    <string name="movie_remove_from_favorites">Remove from favourites</string>
    <string name="movie_got_it">Okay</string>

    <string name="movie_msg_added">Movie added to favourites!</string>
    <string name="movie_msg_not_added">Unable to add Movie to favourites!</string>
    <string name="movie_msg_removed">Movie removed from favourites!</string>
    <string name="movie_msg_not_removed">Unable to remove from favourites!</string>

    <string name="movie_no_of_saved_movies">No. of saved movies:</string>
    <string name="movie_shortest_movie_runtime">Shortest movie runtime:</string>
    <string name="movie_average_movie_runtime">Average movie runtime:</string>
    <string name="movie_longest_movie_runtime">Longest movie runtime:</string>

    <string name="movie_min">min</string>
    <string name="movie_statistics">Statistics</string>
    <string name="movie_movieDetails">Movie details</string>
    <string name="movie_genre">Genre</string>
    <string name="movie_imdb_rating">IMDb Rating</string>
    <string name="movie_language">Language</string>
    <string name="movie_plot">Plot</string>
    <string name="movie_runtime">Runtime</string>
    <string name="movie_country">Country</string>
    <string name="movie_ok">OK</string>
    <string name="movie_app_help_home">
        Click on the \'Search\' button to get search for a movie.
        Click on the movie title to get more information.
        Click on the \'Favourites\' button to view saved movies.
    </string>
    <string name="movie_app_help_detail">
        You can view all the information about a movie, to save movie information offline
        click on \'Add to favourites\'.
        To remove the movie information offline, click on \'Remove from favourites\'.
    </string>

    <string name="movie_none_saved_msg">Add movies into favourites to view statistics!</string>
</resources>
